fix: Ensure full history is fetched for accurate versioning in Docker build workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Full history for accurate versioning
 
       - name: 🏷️ Generate release version
         id: semver
